server/src/compiler_parser/parser.ts
// https://www.angelcode.com/hlsl/sdk/docs/manual/doc_script_bnf.html

import {
    AccessModifier,
    EntityAttribute,
    FuncHead,
    funcHeadConstructor,
    funcHeadDestructor,
    FunctionAttribute,
    isFuncHeadReturnValue,
    NodeArgList,
    NodeAssign,
    NodeBreak,
    NodeCase,
    NodeCast,
    NodeClass,
    NodeCondition,
    NodeConstructCall,
    NodeContinue,
    NodeDataType,
    NodeDoWhile,
    NodeEnum,
    NodeExpr,
    NodeExprPostOp,
    NodeExprPostOp1,
    NodeExprPostOp2,
    NodeExprStat,
    NodeExprTerm1,
    NodeExprTerm2,
    NodeExprValue,
    NodeExprVoid,
    NodeFor,
    NodeForEach,
    NodeForEachVar,
    NodeFunc,
    NodeFuncCall,
    NodeFuncDef,
    NodeIf,
    NodeImport,
    NodeInitList,
    NodeInterface,
    NodeIntfMethod,
    NodeLambda,
    NodeListOp,
    NodeListPattern,
    NodeListValidOperators,
    NodeLiteral,
    NodeMixin,
    NodeName,
    NodeNamespace,
    NodeParamList,
    NodeReturn,
    NodeBase,
    NodeScope,
    NodeScript,
    NodeStatBlock,
    NodeStatement,
    NodeSwitch,
    NodeTry,
    NodeType,
    NodeTypeDef,
    NodeVar,
    NodeVarAccess,
    NodeVirtualProp,
    NodeWhile,
    ParsedArgument,
    ParsedEnumMember,
    ParsedGetterSetter,
    ParsedPostIndexing,
    ParsedVariableInitializer,
    ReferenceModifier,
    TypeModifier, NodeUsing, ClassBasePart
} from "./nodes";
import {HighlightForToken} from "../core/highlight";
import {TokenKind, TokenObject, TokenReserved} from "../compiler_tokenizer/tokenObject";
import {BreakOrThrough, ParseFailure, ParseResult, ParserState} from "./parserState";
import {ParserCacheKind} from "./parserCache";
import {areTokensJoinedBy} from "../compiler_tokenizer/tokenUtils";
import {Mutable} from "../utils/utilities";
import {TokenRange} from "../compiler_tokenizer/tokenRange";
import {getGlobalSettings} from '../core/settings';

// BNF: SCRIPT        ::= {IMPORT | ENUM | TYPEDEF | CLASS | MIXIN | INTERFACE | FUNCDEF | VIRTPROP | VAR | FUNC | NAMESPACE | USING | ';'}
function parseScript(parser: ParserState): NodeScript {
    const script: NodeScript = [];
    while (parser.isEnd() === false) {
        if (parser.next().text === ';') {
            parser.commit(HighlightForToken.Operator);
            continue;
        }

        const parsedImport = parseImport(parser);
        if (parsedImport === ParseFailure.Pending) continue;
        if (parsedImport !== ParseFailure.Mismatch) {
            script.push(parsedImport);
            continue;
        }

        const parsedTypeDef = parseTypeDef(parser);
        if (parsedTypeDef === ParseFailure.Pending) continue;
        if (parsedTypeDef !== ParseFailure.Mismatch) {
            script.push(parsedTypeDef);
            continue;
        }

        const parsedMixin = parseMixin(parser);
        if (parsedMixin === ParseFailure.Pending) continue;
        if (parsedMixin !== ParseFailure.Mismatch) {
            script.push(parsedMixin);
            continue;
        }

        const parsedNamespace = parseNamespace(parser);
        if (parsedNamespace === ParseFailure.Pending) continue;
        if (parsedNamespace !== ParseFailure.Mismatch) {
            script.push(parsedNamespace);
            continue;
        }

        const parsedUsing = parseUsing(parser);
        if (parsedUsing === ParseFailure.Pending) continue;
        if (parsedUsing !== ParseFailure.Mismatch) {
            script.push(parsedUsing);
            continue;
        }

        const parsedClass = parseClass(parser);
        if (parsedClass === ParseFailure.Pending) continue;
        if (parsedClass !== ParseFailure.Mismatch) {
            script.push(parsedClass);
            continue;
        }

        const parsedInterface = parseInterface(parser);
        if (parsedInterface === ParseFailure.Pending) continue;
        if (parsedInterface !== ParseFailure.Mismatch) {
            script.push(parsedInterface);
            continue;
        }

        const parsedEnum = parseEnum(parser);
        if (parsedEnum === ParseFailure.Pending) continue;
        if (parsedEnum !== ParseFailure.Mismatch) {
            script.push(parsedEnum);
            continue;
        }

        const parsedFuncDef = parseFuncDef(parser);
        if (parsedFuncDef === ParseFailure.Pending) continue;
        if (parsedFuncDef !== ParseFailure.Mismatch) {
            script.push(parsedFuncDef);
            continue;
        }

        const parsedFunc = parseFunc(parser);
        if (parsedFunc !== undefined) {
            script.push(parsedFunc);
            continue;
        }

        const parsedVirtualProp = parseVirtualProp(parser);
        if (parsedVirtualProp !== undefined) {
            script.push(parsedVirtualProp);
            continue;
        }

        parseMetadata(parser);
        const parsedVar = parseVar(parser);
        if (parsedVar !== undefined) {
            script.push(parsedVar);
            continue;
        }

        break;
    }

    return script;
}

// BNF: USING         ::= 'using' 'namespace' IDENTIFIER ('::' IDENTIFIER)* ';'
function parseUsing(parser: ParserState): ParseResult<NodeUsing> {
    if (parser.next().text !== 'using') {
        return ParseFailure.Mismatch;
    }

    const rangeStart = parser.next();
    parser.commit(HighlightForToken.Builtin);

    parser.expect('namespace', HighlightForToken.Builtin);

    const namespaceList: TokenObject[] = [];
    while (parser.isEnd() === false) {
        const loopStart = parser.next();

        const identifier = expectIdentifier(parser, HighlightForToken.Namespace);
        if (identifier !== undefined) {
            namespaceList.push(identifier);
        }

        if (expectSeparatorOrClose(parser, '::', ';', true) === BreakOrThrough.Break) {
            break;
        }

        if (parser.next() === loopStart) {
            parser.step();
        }
    }

    if (namespaceList.length === 0) {
        return ParseFailure.Pending;
    }

    return {
        nodeName: NodeName.Using,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        namespaceList: namespaceList
    };
}

// BNF: NAMESPACE     ::= 'namespace' IDENTIFIER {'::' IDENTIFIER} '{' SCRIPT '}'
function parseNamespace(parser: ParserState): ParseResult<NodeNamespace> {
    if (parser.next().text !== 'namespace') return ParseFailure.Mismatch;
    const rangeStart = parser.next();
    parser.commit(HighlightForToken.Builtin);

    const namespaceList: TokenObject[] = [];
    while (parser.isEnd() === false) {
        const loopStart = parser.next();

        const identifier = expectIdentifier(parser, HighlightForToken.Namespace);
        if (identifier !== undefined) namespaceList.push(identifier);

        if (expectSeparatorOrClose(parser, '::', '{', true) === BreakOrThrough.Break) break;

        if (parser.next() === loopStart) parser.step();
    }

    if (namespaceList.length === 0) {
        return ParseFailure.Pending;
    }

    const script = parseScript(parser);

    parser.expect('}', HighlightForToken.Operator);

    return {
        nodeName: NodeName.Namespace,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        namespaceList: namespaceList,
        script: script
    };
}

function parseIdentifier(parser: ParserState, kind: HighlightForToken): TokenObject | undefined {
    const identifier = parser.next();
    if (identifier.kind !== TokenKind.Identifier) return undefined;
    parser.commit(kind);
    return identifier;
}

function expectIdentifier(parser: ParserState, kind: HighlightForToken): TokenObject | undefined {
    const identifier = parseIdentifier(parser, kind);
    if (identifier === undefined) {
        parser.error("Expected identifier.");
    }
    return identifier;
}

function expectContextualKeyword(parser: ParserState, keyword: string): boolean {
    if (parser.next().text !== keyword) {
        parser.error(`Expected '${keyword}'.`);
        return false;
    }
    parser.commit(HighlightForToken.Keyword);
    return true;
}

// BNF: ENUM          ::= {'shared' | 'external'} 'enum' IDENTIFIER [ ':' ('int' | 'int8' | 'int16' | 'int32' | 'int64' | 'uint' | 'uint8' | 'uint16' | 'uint32' | 'uint64') ] (';' | ('{' IDENTIFIER ['=' EXPR] {',' IDENTIFIER ['=' EXPR]} '}'))
function parseEnum(parser: ParserState): ParseResult<NodeEnum> {
    const rangeStart = parser.next();

    const entity = parseEntityAttribute(parser);

    if (parser.next().text !== 'enum') {
        parser.backtrack(rangeStart);
        return ParseFailure.Mismatch;
    }
    parser.commit(HighlightForToken.Builtin);

    const identifier = expectIdentifier(parser, HighlightForToken.Enum);
    if (identifier === undefined) return ParseFailure.Pending;

    let enumType: TokenReserved | undefined;
    if (getGlobalSettings().supportsTypedEnumerations && parser.next().text === ':') {
        parser.commit(HighlightForToken.Operator);
        const typeIdentifier = parsePrimeType(parser);

        if (typeIdentifier === undefined) {
            parser.backtrack(rangeStart);
            return ParseFailure.Mismatch;
        }

        enumType = typeIdentifier;
    }

    let memberList: ParsedEnumMember[] = [];
    const scopeStart = parser.next();

    if (parser.next().text === ';') {
        parser.commit(HighlightForToken.Operator);
    } else {
        memberList = expectEnumMembers(parser);
    }

    return {
        nodeName: NodeName.Enum,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        scopeRange: new TokenRange(scopeStart, parser.prev()),
        entity: entity,
        identifier: identifier,
        memberList: memberList,
        enumType: enumType
    };
}

// '{' IDENTIFIER ['=' EXPR] {',' IDENTIFIER ['=' EXPR]} [','] '}'
function expectEnumMembers(parser: ParserState): ParsedEnumMember[] {
    const members: ParsedEnumMember[] = [];
    parser.expect('{', HighlightForToken.Operator);
    while (parser.isEnd() === false) {
        if (expectSeparatorOrClose(parser, ',', '}', members.length > 0) === BreakOrThrough.Break) break;

        if (parser.next().text === '}') {
            parser.commit(HighlightForToken.Operator);
            break;
        }

        const identifier = expectIdentifier(parser, HighlightForToken.EnumMember);
        if (identifier === undefined) break;

        let expr: NodeExpr | undefined = undefined;
        if (parser.next().text === '=') {
            parser.commit(HighlightForToken.Operator);
            expr = expectExpr(parser);
        }

        members.push({identifier: identifier, expr: expr});
    }

    return members;

}

// {'shared' | 'abstract' | 'final' | 'external'}
function parseEntityAttribute(parser: ParserState): EntityAttribute | undefined {
    const cache = parser.cache(ParserCacheKind.EntityAttribute);
    if (cache.restore !== undefined) return cache.restore();

    let attribute: EntityAttribute | undefined = undefined;
    while (parser.isEnd() === false) {
        const next = parser.next().text;

        const isEntityToken = next === 'shared' || next === 'external' || next === 'abstract' || next === 'final';
        if (isEntityToken === false) break;

        attribute = attribute ?? {
            isShared: false,
            isExternal: false,
            isAbstract: false,
            isFinal: false
        };

        setEntityAttribute(attribute, next);
        parser.commit(HighlightForToken.Builtin);
    }

    cache.store(attribute);
    return attribute;
}

function setEntityAttribute(attribute: Mutable<EntityAttribute>, token: 'shared' | 'external' | 'abstract' | 'final') {
    if (token === 'shared') attribute.isShared = true;
    else if (token === 'external') attribute.isExternal = true;
    else if (token === 'abstract') attribute.isAbstract = true;
    else if (token === 'final') attribute.isFinal = true;
}

// BNF: CLASS         ::= {'shared' | 'abstract' | 'final' | 'external'} 'class' IDENTIFIER (';' | ([':' SCOPE IDENTIFIER {',' SCOPE IDENTIFIER}] '{' {VIRTPROP | FUNC | VAR | FUNCDEF} '}'))
function parseClass(parser: ParserState): ParseResult<NodeClass> {
    const rangeStart = parser.next();

    const metadata = parseMetadata(parser);

    const entity = parseEntityAttribute(parser);

    if (parser.next().text !== 'class') {
        parser.backtrack(rangeStart);
        return ParseFailure.Mismatch;
    }

    parser.commit(HighlightForToken.Builtin);

    const identifier = expectIdentifier(parser, HighlightForToken.Class);
    if (identifier === undefined) return ParseFailure.Pending;

    const typeTemplates = parseTypeTemplates(parser);

    const baseList: ClassBasePart[] = [];
    if (parser.next().text === ':') {
        parser.commit(HighlightForToken.Operator);
        while (parser.isEnd() === false) {
            const loopStart = parser.next();

            const scope = parseScope(parser);

            const identifier = expectIdentifier(parser, HighlightForToken.Type);

            baseList.push({scope, identifier});

            if (expectSeparatorOrClose(parser, ',', '{', true) === BreakOrThrough.Break) {
                break;
            }

            if (parser.next() === loopStart) {
                parser.step();
            }
        }
    } else {
        parser.expect('{', HighlightForToken.Operator);
    }

    const scopeStart = parser.next();
    const members = expectClassMembers(parser);
    const scopeEnd = parser.prev();

    return {
        nodeName: NodeName.Class,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        scopeRange: new TokenRange(scopeStart, scopeEnd),
        metadata: metadata,
        entity: entity,
        identifier: identifier,
        typeTemplates: typeTemplates,
        baseList: baseList,
        memberList: members
    };
}

// '{' {VIRTPROP | FUNC | VAR | FUNCDEF} '}'
function expectClassMembers(parser: ParserState) {
    // parser.expect('{', HighlightTokenKind.Operator);
    const members: (NodeVirtualProp | NodeVar | NodeFunc | NodeFuncDef)[] = [];
    while (parser.isEnd() === false) {
        if (parseCloseOperator(parser, '}') === BreakOrThrough.Break) break;

        const parsedFuncDef = parseFuncDef(parser);
        if (parsedFuncDef === ParseFailure.Pending) continue;
        if (parsedFuncDef !== ParseFailure.Mismatch) {
            members.push(parsedFuncDef);
            continue;
        }

        const parsedFunc = parseFunc(parser);
        if (parsedFunc !== undefined) {
            members.push(parsedFunc);
            continue;
        }

        const parsedVirtualProp = parseVirtualProp(parser);
        if (parsedVirtualProp !== undefined) {
            members.push(parsedVirtualProp);
            continue;
        }

        const parsedVar = parseVar(parser);
        if (parsedVar !== undefined) {
            members.push(parsedVar);
            continue;
        }

        parser.error("Expected class member.");
        parser.step();
    }

    return members;
}

// TYPE IDENTIFIER
function parseForEachVar(parser: ParserState): NodeForEachVar | undefined {
    const rangeStart = parser.next();
    const type = expectType(parser);

    if (type === undefined)
        return undefined;

    const identifier = expectIdentifier(parser, HighlightForToken.Variable);

    if (identifier === undefined)
        return undefined;

    return {
        nodeName: NodeName.ForEachVar,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        type: type,
        identifier: identifier
    };
}

// BNF: TYPEDEF       ::= 'typedef' PRIMTYPE IDENTIFIER ';'
function parseTypeDef(parser: ParserState): ParseResult<NodeTypeDef> {
    if (parser.next().text !== 'typedef') return ParseFailure.Mismatch;
    const rangeStart = parser.next();
    parser.commit(HighlightForToken.Builtin);

    const primeType = parsePrimeType(parser);
    if (primeType === undefined) {
        parser.error("Expected primitive type.");
        return ParseFailure.Pending;
    }

    const identifier = parser.next();
    parser.commit(HighlightForToken.Type);

    parser.expect(';', HighlightForToken.Operator);

    return {
        nodeName: NodeName.TypeDef,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        type: primeType,
        identifier: identifier
    };
}

// BNF: LISTENTRY     ::= (('repeat' | 'repeat_same') (('{' LISTENTRY '}') | TYPE)) | (TYPE {',' TYPE})
function parseListEntry(parser: ParserState, operators: NodeListValidOperators[]): boolean {
    let listDepth = 0;

    while (!parser.isEnd()) {
        if (parser.next().text === '{') {
            parser.commit(HighlightForToken.Operator);

            operators.push({
                operator: NodeListOp.StartList
            });
            listDepth++;
        } else if (parser.next().text === '}') {

            if (!listDepth) {
                break;
            } else {
                parser.commit(HighlightForToken.Operator);
                listDepth--;

                operators.push({
                    operator: NodeListOp.EndList
                });
            }
        } else if (parser.next().text === 'repeat' || parser.next().text === 'repeat_same') {
            parser.commit(HighlightForToken.Keyword);

            operators.push({
                operator: parser.next().text === 'repeat' ? NodeListOp.Repeat : NodeListOp.RepeatSame
            });
        } else if (parser.next().text === ',') {
            parser.commit(HighlightForToken.Operator);
        } else {
            const type = parseType(parser);

            if (type === undefined) {
                return false;
            }

            operators.push({
                operator: NodeListOp.Type,
                type: type
            });
        }
    }

    return listDepth === 0;
}

// BNF: LISTPATTERN   ::= '{' LISTENTRY {',' LISTENTRY} '}'
function parseListPattern(parser: ParserState): NodeListPattern | undefined {
    if (parser.isPredefinedFile === false) return undefined;

    const rangeStart = parser.next();

    if (parser.next().text !== '{') {
        return undefined;
    }

    parser.commit(HighlightForToken.Operator);

    const listOperations: NodeListValidOperators[] = [];

    // parse list entries
    while (!parser.isEnd()) {
        if (parser.next().text === '}') {
            break;
        }

        const entry = parseListEntry(parser, listOperations);

        if (entry === false) {
            parser.backtrack(rangeStart);
            return undefined;
        }
    }

    if (parser.next().text !== '}' || listOperations.length === 0) {
        parser.backtrack(rangeStart);
        return undefined;
    }

    parser.commit(HighlightForToken.Operator);
}

// BNF: FUNC          ::= {'shared' | 'external'} ['private' | 'protected'] [((TYPE ['&']) | '~')] IDENTIFIER PARAMLIST [LISTPATTERN] ['const'] FUNCATTR (';' | STATBLOCK)
function parseFunc(parser: ParserState): NodeFunc | undefined {
    const rangeStart = parser.next();

    parseMetadata(parser);

    const entityAttribute = parseEntityAttribute(parser);

    const accessor = parseAccessModifier(parser);

    let head: FuncHead;
    if (parser.next().text === '~') {
        parser.commit(HighlightForToken.Operator);
        head = funcHeadDestructor;
    } else if (parser.next(0).kind === TokenKind.Identifier && parser.next(1).text === '(') {
        head = funcHeadConstructor;
    } else {
        const returnType = parseType(parser);
        if (returnType === undefined) {
            parser.backtrack(rangeStart);
            return undefined;
        }

        const isRef = parseRef(parser);

        head = {returnType: returnType, isRef: isRef};
    }
    const identifier = parser.next();
    parser.commit(isFuncHeadReturnValue(head) ? HighlightForToken.Function : HighlightForToken.Type);

    const typeTemplates = parseTypeTemplates(parser) ?? [];

    if (parser.isPredefinedFile === false) {
        // Function declaration is not allowed outside 'hlsl.predefined'
        if (lookaheadTokenAfterParentheses(parser)?.text === ';') {
            // This node can be a variable calling a constructor, not a function declaration.
            parser.backtrack(rangeStart);
            return undefined;
        }
    }

    const paramList = parseParamList(parser);
    if (paramList === undefined) {
        parser.backtrack(rangeStart);
        return undefined;
    }

    const listPattern: NodeListPattern | undefined = parseListPattern(parser);

    let statBlock: NodeStatBlock | undefined = undefined;
    let funcAttr: FunctionAttribute | undefined = undefined;
    let isConst = false;

    if (listPattern === undefined) {
        isConst = parseConst(parser);

        funcAttr = parseFuncAttr(parser);

        if (parser.next().text === ';') {
            parser.commit(HighlightForToken.Operator);
        } else {
            statBlock = expectStatBlock(parser);
        }
    } else {
        if (parser.next().text !== ';') {
            parser.backtrack(rangeStart);
            return undefined;
        }

        parser.commit(HighlightForToken.Operator);
    }

    statBlock = statBlock ?? {
        nodeName: NodeName.StatBlock,
        nodeRange: new TokenRange(parser.next(), parser.next()),
        statementList: []
    };

    return {
        nodeName: NodeName.Func,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        entity: entityAttribute,
        accessor: accessor,
        head: head,
        identifier: identifier,
        paramList: paramList,
        isConst: isConst,
        funcAttr: funcAttr,
        statBlock: statBlock,
        typeTemplates: typeTemplates,
        listPattern: listPattern
    };
}

function parseConst(parser: ParserState): boolean {
    if (parser.next().text !== 'const') return false;
    parser.commit(HighlightForToken.Keyword);
    return true;
}

function parseRef(parser: ParserState) {
    const isRef = parser.next().text === '&';
    if (isRef) parser.commit(HighlightForToken.Builtin);
    return isRef;
}

function lookaheadTokenAfterParentheses(parser: ParserState) {
    let level = 0;
    let i = 0;
    while (parser.isEnd() === false) {
        const token = parser.next(i);
        if (token.text === '(') {
            level++;
        } else if (token.text === ')') {
            level--;
            if (level < 0) {
                return token;
            }
        } else if (level === 0) {
            return token;
        }

        i++;
    }

    return undefined;
}

// Metadata declarations in the same place and the only other rule is the matching count of '[' and ']'
// e.g., '[Hello[]]' is ok but '[Hello[]' is not.
function parseMetadata(parser: ParserState): TokenObject[][] {
    const rangeStart = parser.next();
    if (parser.next().text !== '[') return [];

    let level = 0;

    const metadata: TokenObject[][] = [[]];
    while (parser.isEnd() === false) {
        if (parser.next().text === '[') {
            if (level > 0) metadata.at(-1)!.push(parser.next());

            level++;
            parser.commit(HighlightForToken.Operator);
        } else if (parser.next().text === ']') {
            level--;
            parser.commit(HighlightForToken.Operator);

            if (level === 0) {
                // Since AngelScript supports multiple metadata declarations in subsequent pairs of '[' and ']', we recursively parse those declarations here.
                // e.g., '[Hello][World]' is valid, as is
                // [Hello]
                // [World]
                if (parser.next().text === '[') {
                    metadata.push([]);
                    continue;
                }

                return metadata;
            } else metadata.at(-1)!.push(parser.next());
        } else {
            metadata.at(-1)!.push(parser.next());
            parser.commit(HighlightForToken.Decorator);
        }
    }

    // when level !== 0
    parser.backtrack(rangeStart);
    return [];
}

// ['private' | 'protected']
function parseAccessModifier(parser: ParserState): AccessModifier | undefined {
    const next = parser.next().text;
    if (next === 'private' || next === 'protected') {
        parser.commit(HighlightForToken.Builtin);
        return next === 'private' ? AccessModifier.Private : AccessModifier.Protected;
    }
    return undefined;
}

// BNF: INTERFACE     ::= {'external' | 'shared'} 'interface' IDENTIFIER (';' | ([':' SCOPE IDENTIFIER {',' SCOPE IDENTIFIER}] '{' {VIRTPROP | INTFMTHD} '}'))
function parseInterface(parser: ParserState): ParseResult<NodeInterface> {
    const rangeStart = parser.next();

    const entity = parseEntityAttribute(parser);

    if (parser.next().text !== 'interface') {
        parser.backtrack(rangeStart);
        return ParseFailure.Mismatch;
    }
    parser.commit(HighlightForToken.Builtin);

    const identifier = expectIdentifier(parser, HighlightForToken.Interface);
    if (identifier === undefined) return ParseFailure.Pending;

    const result: Mutable<NodeInterface> = {
        nodeName: NodeName.Interface,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        entity: entity,
        identifier: identifier,
        baseList: [],
        memberList: []
    };

    if (parser.next().text === ';') {
        parser.commit(HighlightForToken.Operator);
        return result;
    }

    if (parser.next().text === ':') {
        parser.commit(HighlightForToken.Operator);
        while (parser.isEnd() === false) {
            const loopStart = parser.next();

            const scope = parseScope(parser);

            const identifier = expectIdentifier(parser, HighlightForToken.Type);

            result.baseList.push({scope, identifier});

            if (expectSeparatorOrClose(parser, ',', '{', true) === BreakOrThrough.Break) {
                break;
            }

            if (parser.next() === loopStart) {
                parser.step();
            }
        }
    } else {
        parser.expect('{', HighlightForToken.Operator);
    }

    result.memberList = expectInterfaceMembers(parser);

    return result;
}

// '{' {VIRTPROP | INTFMTHD} '}'
function expectInterfaceMembers(parser: ParserState): (NodeIntfMethod | NodeVirtualProp)[] {
    // parser.expect('{', HighlightTokenKind.Operator);

    const members: (NodeIntfMethod | NodeVirtualProp)[] = [];
    while (parser.isEnd() === false) {
        if (parseCloseOperator(parser, '}') === BreakOrThrough.Break) break;

        const intfMethod = parseIntfMethod(parser);
        if (intfMethod !== undefined) {
            members.push(intfMethod);
            continue;
        }

        const virtualProp = parseVirtualProp(parser);
        if (virtualProp !== undefined) {
            members.push(virtualProp);
            continue;
        }

        parser.error("Expected interface member.");
        parser.step();
    }

    return members;
}

// BNF: VAR           ::= ['private' | 'protected'] TYPE IDENTIFIER [( '=' (INITLIST | ASSIGN)) | ARGLIST] {',' IDENTIFIER [( '=' (INITLIST | ASSIGN)) | ARGLIST]} ';'
function parseVar(parser: ParserState): NodeVar | undefined {
    const rangeStart = parser.next();

    parseMetadata(parser);

    const accessor = parseAccessModifier(parser);

    const type = parseType(parser);
    if (type === undefined) {
        parser.backtrack(rangeStart);
        return undefined;
    }

    if (parser.next().kind !== TokenKind.Identifier) {
        parser.backtrack(rangeStart);
        return undefined;
    }

    const variables: ParsedVariableInitializer[] = [];
    while (parser.isEnd() === false) {
        const identifier = expectIdentifier(parser, HighlightForToken.Variable);
        if (identifier === undefined) break;

        if (parser.next().text === '=') {
            parser.commit(HighlightForToken.Operator);

            const initListOrExpr = expectInitListOrExpr(parser);
            variables.push({identifier: identifier, initializer: initListOrExpr});
        } else {
            const argList = parseArgList(parser);
            variables.push({identifier: identifier, initializer: argList});
        }

        if (expectSeparatorOrClose(parser, ',', ';', true) === BreakOrThrough.Break) break;
    }

    return {
        nodeName: NodeName.Var,
        nodeRange: new TokenRange(rangeStart, parser.prev()),
        accessor: accessor,
        type: type,
        variables: variables
    };
}

function expectInitListOrExpr(parser: ParserState) {
    const initList = parseInitList(parser);
    if (initList !== undefined) {
        return initList;
    }
